# MAYO-LLVM

./: .gitignore  example.cpp
KAT/: PQCsignKAT_24_MAYO_1.rsp
apps/: PQCgenKAT_sign.c  example.c
include/: mayo.h
llvm-apps/: Hello.cpp  mayo.ll  run.sh
llvm-apps/fault-examples/: funcSkip.ll  loopFault.smt2  smt_parser.cpp  smt_parser2.cpp
llvm-apps/fault-prop/: CMakeLists.txt  CMakeLists2.txt  correct.smt2  fault_prop.cpp  faulty_one.ll  faulty_one.smt2  faulty_opB.ll  faulty_opB.smt2  faulty_opC.ll  faulty_opC.smt2  faulty_undef.ll  faulty_undef.smt2  faulty_zero.ll  faulty_zero.smt2  loopSkip.cpp  original.ll  output.txt  smt_parser  smt_parser.cpp  test.c  test.ll
llvm-apps/fault-prop/binOpFault/: faulty_opB.ll  faulty_opB.smt2  faulty_opC.ll  faulty_undef.ll  faulty_undef.smt2  faulty_zero.ll  llvmbmc  original.ll  smt_parser.cpp  test.c
llvm-apps/fault-prop/loopnFuncSkip/: correct.smt2  funcSkip.ll  funcSkip.smt2  loopFault.smt2  loopSkip.cpp  loopSkip.ll  original.ll  test.ll
llvm-apps/fault-prop/mayo_P3_fault/: CMakeLists.txt  funcSkip.cpp  funcSkip.ll  original.ll
llvm-apps/fault-prop/mayo_VL_fault/: .mul_add_mat_x_m_mat.dot  correct.smt2  funcSkip.ll  funcSkip.smt2  loopFault.smt2  loopSkip.cpp  loopSkip.ll  original.ll  smt_parser.cpp
llvm-apps/fault-prop/mayo_sign_add_skip/: C1.smt2  (+20 more)
llvm-apps/fault-test/: fault_prop.cpp  mayo.ll  output.txt
llvm-apps/mayo-propagation-analysis/: CMakeLists.txt  def-chain.txt  level_prop.cpp  level_prop2.cpp  mayo.ll  mayo2.ll  output.txt
llvm-apps/mayo_pass/: CMakeLists.txt  Hello.cpp  example.bc  example.c  example_mayo.bc  example_mayo.ll  hello.cpp  mayo.bc  mayo.ll  mayo1.ll  mayo2.ll  mayo3.ll  mayo5.ll  mayo_constant_prop.cpp  mem.c
llvm-apps/mayo_pass/no-inline/: mayo1.ll  mayo5.ll
llvm-apps/mayo_pass/no_struct/: mayo3.ll  mayo5.ll
llvm-apps/mayo_pass/test/: link.ld  mayo1.ll  mayo2.ll  mayo3.ll  mayo5.ll  startup.c
llvm-apps/mayo_pass/unrolled/: mayo2.ll  mayo5.ll
llvm-apps/taint-prop/: CMakeLists.txt  taint_prop.cpp
llvm-apps/z3_fn/: CMakeLists.txt  output.txt  output2.txt  v_Ox_add_expr.cpp  v_Ox_add_expr2.cpp  v_Ox_add_expr3.cpp  z3_demo  z3_demo.cpp
results/: EF.json  P1P1t_times_O.json  P1_times_O.json  P1_times_Vt.json  add_f.json  compute_A.json  compute_M_and_VPV.json  compute_P3.json  compute_rhs.json  decode.json  ef_pack_m_vec.json  ef_unpack_m_vec.json  encode.json  expand_P1_P2.json  lincomb.json  m_vec_copy.json  mat_add.json  mat_mul.json  mayo_expand_sk.json  mayo_sign_signature.json  mul_add_mat_trans_x_m_mat.json  mul_add_mat_x_m_mat.json  mul_f.json  pqmayo_MAYO_1_ref_mayo_expand_pk.json  pqmayo_MAYO_1_ref_mayo_expand_sk.json  pqmayo_MAYO_1_ref_mayo_sign_signature.json  sub_f.json
src/: mayo.c  simple_arithmetic.h  trace.h
src/generic/: arithmetic_fixed.h  echelon_form.h  generic_arithmetic.h
test/: bench.c
(+98 files in other folders)
